--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <div id="intro-main">
         <p>이미 모두의 은행, 패스트뱅크</p>
-        <p>이상훈!공부하세요!</p>
+        <p>함께 일해요!</p>
         <p id="join-us-text">Join us!</p>
         <img id="down-arrow-icon" src="img/Down arrow.png" alt="downarrowicon">
     </div>
@@ -194,6 +194,7 @@
 
     const handleSlideChange = (step) => {
         currentImage += step
+
 
         if (currentImage < 0) {
             currentImage = sliderImages.length - 1
